welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: Int(1) does not take parameters
    if (a<0)1(b<0){
             ^